--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <a href="" class="btn">Home</a>
             <a href="" class="btn">Blog</a>
             <a href="" class="btn">Tools</a>
-	    <a href="{{ '/assets/pdf/Anh-Duy-Tran-CV.pdf" class="btn">CV</a>
+	    <a href="{{ '/assets/pdf/Anh-Duy-Tran-CV.pdf' }}" class="btn">CV</a>
             <a href="" class="btn">Recent News</a>
           {% endif %}
         </section>
