--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
 
         <section id="menu">
           {% if site.show_downloads %}
-            <a href="" class="btn">Home</a>
+            <a href="https://pakkunandy.github.io/" class="btn">Home</a>
             <a href="" class="btn">Blog</a>
-            <a href="" class="btn">Tools</a>
+            <a href="https://github.com/pakkunandy" class="btn">Tools</a>
 	    <a href="{{ '/assets/pdf/Anh-Duy-Tran-CV.pdf' }}" class="btn">CV</a>
             <a href="" class="btn">Recent News</a>
           {% endif %}
