Update recent news

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             <a href="" class="btn">Blog</a>
             <a href="https://github.com/pakkunandy" class="btn">Tools</a>
 	    <a href="{{ '/assets/pdf/Anh-Duy-Tran-CV.pdf' }}" class="btn">CV</a>
-	    <a href="{{ 'recent-news.md }}" class="btn">Recent News</a>
+	    <a href="{{ './recent-news.html' }}" class="btn">Recent News</a>
           {% endif %}
         </section>
       </div>
